--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   },
   "devDependencies": {
