--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
